change branch to condition for build step

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ deploy:
   provider: script
   script: bash scripts/docker_push.sh
   on:
-    branch: ${TRAVIS_BRANCH} == "master" || -n ${TRAVIS_TAG}
+    condition: ${TRAVIS_BRANCH} == "master" || -n ${TRAVIS_TAG}
