only run on master and tagged versions

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,13 @@ language: ruby
 services:
   - docker
 
+branches:
+  only:
+    - master
+    - ^v(?:[0-9]*\.){2}(?:[0-9]*)
+
 script:
-  - if [[ "${TRAVIS_BRANCH}" =~ ^v.* ]]; then export BUILD_TAG=${TRAVIS_BRANCH}; else export BUILD_TAG=latest; fi
+  - if [[ "${TRAVIS_BRANCH}" =~ ^v(?:[0-9]*\.){2}(?:[0-9]*) ]]; then export BUILD_TAG=${TRAVIS_BRANCH}; else export BUILD_TAG=latest; fi
   - docker build -t tnwhitwell/logspout-logstash:${TRAVIS_BRANCH} --build-arg LOGSPOUT_VERSION=${BUILD_TAG} .
   - docker tag tnwhitwell/logspout-logstash:${TRAVIS_BRANCH} tnwhitwell/logspout-logstash:latest
 deploy:
