--- a/.travis.yml
+++ b/.travis.yml
@@ -8,14 +8,15 @@ services:
 branches:
   only:
     - master
-    - ^v(?:[0-9]*\.){2}(?:[0-9]*)
+    - /^v(?:[0-9]*\.){2}(?:[0-9]*)$/
 
 script:
-  - if [[ "${TRAVIS_BRANCH}" =~ ^v(?:[0-9]*\.){2}(?:[0-9]*) ]]; then export BUILD_TAG=${TRAVIS_BRANCH}; else export BUILD_TAG=latest; fi
+  - if [ "${TRAVIS_BRANCH}" != "master" ]; then export BUILD_TAG=${TRAVIS_BRANCH}; else export BUILD_TAG=latest; fi
   - docker build -t tnwhitwell/logspout-logstash:${TRAVIS_BRANCH} --build-arg LOGSPOUT_VERSION=${BUILD_TAG} .
   - docker tag tnwhitwell/logspout-logstash:${TRAVIS_BRANCH} tnwhitwell/logspout-logstash:latest
+
 deploy:
   provider: script
   script: bash scripts/docker_push.sh
   on:
-    condition: ${TRAVIS_BRANCH} == "master" || -n ${TRAVIS_TAG}
+    all_branches: true
